--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,40 +5,40 @@
       "node": true
   },
   "rules": {
-      "no-duplicate-case":"error",
-      "no-empty":"error",
-      "no-extra-semi":"error",
-      "no-func-assign": "error",
-      "no-irregular-whitespace":"error",
-      "no-unreachable": "error",
-      "curly": "error",
-      "dot-notation": "error",
-      "eqeqeq": "error",
-      "no-empty-function": "error",
-      "no-multi-spaces": "error",
-      "no-mixed-spaces-and-tabs": "error",
-      "no-trailing-spaces": "error",
-      "default-case": "error",
-      "no-fallthrough": "error",
-      "no-unused-vars": "error",
-      "no-use-before-define": "error",
-      "no-redeclare": "error",
-      "camelcase": "error",
-      "brace-style": "error",
+      "no-duplicate-case":"warn",
+      "no-empty":"warn",
+      "no-extra-semi":"warn",
+      "no-func-assign": "warn",
+      "no-irregular-whitespace":"warn",
+      "no-unreachable": "warn",
+      "curly": "warn",
+      "dot-notation": "warn",
+      "eqeqeq": "warn",
+      "no-empty-function": "warn",
+      "no-multi-spaces": "warn",
+      "no-mixed-spaces-and-tabs": "warn",
+      "no-trailing-spaces": "warn",
+      "default-case": "warn",
+      "no-fallthrough": "warn",
+      "no-unused-vars": "warn",
+      "no-use-before-define": "warn",
+      "no-redeclare": "warn",
+      "camelcase": "warn",
+      "brace-style": "warn",
       "indent": [
-          "error",
+          "warn",
           2
       ],
       "linebreak-style": [
-          "error",
+          "warn",
           "unix"
       ],
       "quotes": [
-          "error",
+          "warn",
           "double"
       ],
       "semi": [
-          "error",
+          "warn",
           "always"
       ]
   }
