--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "express": "^4.17.1",
+    "express-handlebars": "^4.0.3",
     "express-session": "^1.17.1",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
@@ -15,8 +16,7 @@
     "sequelize": "^5.21.6"
   },
   "devDependencies": {},
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wojeil/Project_2.git"
